--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>willyouman/Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -55,13 +55,13 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="https://willyouman.github.io/Information/Home">Home</a></li>
+        <li><a href="https://willyouman.github.io/Information/Contact">Contact</a></li>
+        <li><a href="https://willyouman.github.io/Information/Experience">Experience</a></li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        
       </ul>
     </div>
   </div>
@@ -76,7 +76,7 @@
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Welcome!</h1>
-      <p>This !.</p>
+      <p>This is my home page.</p>
       <hr>
       <h3>Test</h3>
       <p>Lorem ipsum...</p>
