added experience from resume

--- a/Experience.html
+++ b/Experience.html
@@ -78,6 +78,41 @@
     <div class="col-sm-8 text-left"> 
       <h1>Experience</h1>
       <p>This is a fully comprehensive reference of my entire work experience. </p>
+      <p>Electrical Engineering Intern, Ultronic Systems Inc.			                     Spring 2018-Current
+-	Used an API to communicate with product websites in order to create local database 
+-	Over 300 hours of electrical wiring experience
+-	Reverse engineered furnace board microcontrollers to adapt them to different climatic settings
+-	Designed a circuit board that operated a furnace while meeting all UL safety specifications
+-	Prototyped and tested electrical circuits for power levels and current readings
+-	Formed circuit board layouts using KiCad software
+
+Marquette University Facilities Manager		      				       Spring 2019-Current	
+-	Manage a staff of up to 20 desk receptionists 
+-	Supervise and delegate tasks to 20 desk members and 15 resident assistants
+-	Overlook facilities for damage, functionality, and possible improvement
+-	Interview desk staff and other essential personal for campus jobs
+-	Hold 10 office hours weekly 
+	Cooperate with campus mechanics, janitors, and directors to ensure outstanding housing services
+-	Remain on-call for Marquette campus residential facilities for certain weekends and weekdays 
+
+Software and Coding Experience   						            Fall 2016-Current
+-	Knowledgeable in C, Java, and VHDL programming languages
+-	Familiar with C#, TypeScript, and C++ programming languages
+-	4 years of experience in Inventor, Solid Works, BIM and AutoCad 3d modeling software’s
+-	Experienced in all Microsoft Office applications
+-	Learned in photoshop, Logger Pro, and Paint design software’s
+
+Laboratory Technician, Fermi National Accelerator Laboratory   		             Summer and Winter 2017
+-	Organized and filed engineering equipment into a database using Microsoft Excel
+-	Implemented bar code serialization of equipment for standardized resource allocation
+-	Administered equipment tests to ensure proper functioning of engineering tools in the lab
+-	Underwent Radiation Training to handle dangerous chemicals
+
+Biomedical Engineering Laboratory						     Fall 2016-Spring 2017
+-	Designed and prototyped innovative epinephrine injector for anaphylactic shock treatment
+-	Formulated algorithms for atrial fibrillation and flutter using EKG test results
+-	Data sampling ECG waves to determine sinusoidal properties using Excel
+</p>
       <hr>
       <h3>Contact Information:</h3>
       <p>Email: william.youman@marquette.edu
