--- a/Experience.html
+++ b/Experience.html
@@ -71,50 +71,50 @@
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+      <p><a href="https://www.ultronic.com/">Ultronic Systems</a></p>
+      <p><a href="https://www.marquette.edu/residence-life/">Marquette Office of Residence Life</a></p>
+      <p><a href="http://www.fnal.gov/">Fermilab National Laboratory</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Experience</h1>
       <p>This is a fully comprehensive reference of my entire work experience. </p>
       <p>
 	
-	<h2>Electrical Engineering Intern, Ultronic Systems Inc. 		Spring 2018-Current</h2>
+	<h2>Electrical Engineering Intern, Ultronic Systems Inc. <br/>Spring 2018-Current</h2>
 <ul>
--	Used an API to communicate with product websites in order to create local database 
--	Over 300 hours of electrical wiring experience
--	Reverse engineered furnace board microcontrollers to adapt them to different climatic settings
--	Designed a circuit board that operated a furnace while meeting all UL safety specifications
--	Prototyped and tested electrical circuits for power levels and current readings
--	Formed circuit board layouts using KiCad software
+<li>Used an API to communicate with product websites in order to create local database </li>
+<li>Over 300 hours of electrical wiring experience</li>
+<li>Reverse engineered furnace board microcontrollers to adapt them to different climatic settings</li>
+<li>Designed a circuit board that operated a furnace while meeting all UL safety specifications</li>
+<li>Prototyped and tested electrical circuits for power levels and current readings</li>
+<li>Formed circuit board layouts using KiCad software</li>
 </ul>
-	<h2>Marquette University Facilities Manager  			       Spring 2019-Current</h2>	
+	<h2>Marquette University Facilities Manager <br/> Spring 2019-Current</h2>	
 <ul>
 <li>Manage a staff of up to 20 desk receptionists</li> 
--	Supervise and delegate tasks to 20 desk members and 15 resident assistants</li>
--	Overlook facilities for damage, functionality, and possible improvement</li>
--	Interview desk staff and other essential personal for campus jobs</li>
--	Hold 10 office hours weekly </li>
--	Cooperate with campus mechanics, janitors, and directors to ensure outstanding housing services</li>
--	Remain on-call for Marquette campus residential facilities for certain weekends and weekdays </li>
+<li>Supervise and delegate tasks to 20 desk members and 15 resident assistants</li>
+<li>Overlook facilities for damage, functionality, and possible improvement</li>
+<li>Interview desk staff and other essential personal for campus jobs</li>
+<li>Hold 10 office hours weekly </li>
+<li>Cooperate with campus mechanics, janitors, and directors to ensure outstanding housing services</li>
+<li>Remain on-call for Marquette campus residential facilities for certain weekends and weekdays </li>
 </ul>
-	<h2>Software and Coding Experience   				            Fall 2016-Current</h2>
+	<h2>Software and Coding Experience <br/> Fall 2016-Current</h2>
 <ul>
--	Knowledgeable in C, Java, and VHDL programming languages</li>
--	Familiar with C#, TypeScript, and C++ programming languages</li>
--	4 years of experience in Inventor, Solid Works, BIM and AutoCad 3d modeling software’s</li>
--	Experienced in all Microsoft Office applications</li>
--	Learned in photoshop, Logger Pro, and Paint design software’s</li>
+<li>Knowledgeable in C, Java, and VHDL programming languages</li>
+<li>Familiar with C#, TypeScript, and C++ programming languages</li>
+<li>4 years of experience in Inventor, Solid Works, BIM and AutoCad 3d modeling software’s</li>
+<li>Experienced in all Microsoft Office applications</li>
+<li>Learned in photoshop, Logger Pro, and Paint design software’s</li>
 </ul>
-	<h2>Laboratory Technician, Fermi National Accelerator Laboratory  	  Summer and Winter 2017</h2>
+	<h2>Laboratory Technician, Fermi National Accelerator Laboratory <br/>Summer and Winter 2017</h2>
 <ul>
 <li>Organized and filed engineering equipment into a database using Microsoft Excel</li>
 <li>Implemented bar code serialization of equipment for standardized resource allocation</li>
 <li>Administered equipment tests to ensure proper functioning of engineering tools in the lab</li>
 <li>Underwent Radiation Training to handle dangerous chemicals</li>
 </ul>
-	<h2>Biomedical Engineering Laboratory			   Fall 2016-Spring 2017</h2>
+	<h2>Biomedical Engineering Laboratory<br/> Fall 2016-Spring 2017</h2>
 <ul>
 <li>	Designed and prototyped innovative epinephrine injector for anaphylactic shock treatment</li>
 <li>Formulated algorithms for atrial fibrillation and flutter using EKG test results</li>
@@ -129,16 +129,18 @@
     <div class="col-sm-2 sidenav">
       <div class="well">
         <p>Ultronic</p>
+	<img src=>"http://www.fnal.gov/pub/about/images/Gallery.jpg"
       </div>
       <div class="well">
         <p>Marqette Office of Residence Life</p>
+	<img src=>
       </div>
     </div>
   </div>
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>William Youman</p>
 </footer>
 
 </body>
