--- a/Experience.html
+++ b/Experience.html
@@ -129,7 +129,7 @@
     <div class="col-sm-2 sidenav">
       <div class="well">
         <p>Ultronic</p>
-	<img src=>"http://www.fnal.gov/pub/about/images/Gallery.jpg"
+	<img src="http://www.fnal.gov/pub/about/images/Gallery.jpg">
       </div>
       <div class="well">
         <p>Marqette Office of Residence Life</p>
