--- a/Experience.html
+++ b/Experience.html
@@ -77,9 +77,9 @@
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Experience</h1>
-      <p>This is a fully comprehensive reference of my entire work experience. </p>
+      <p>This is a fully comprehensive reference of my engineering experience. </p>
       <p>
-	
+<hr>	
 	<h2>Electrical Engineering Intern, Ultronic Systems Inc. <br/>Spring 2018-Current</h2>
 <ul>
 <li>Used an API to communicate with product websites in order to create local database </li>
@@ -89,6 +89,7 @@
 <li>Prototyped and tested electrical circuits for power levels and current readings</li>
 <li>Formed circuit board layouts using KiCad software</li>
 </ul>
+<hr>
 	<h2>Marquette University Facilities Manager <br/> Spring 2019-Current</h2>	
 <ul>
 <li>Manage a staff of up to 20 desk receptionists</li> 
@@ -99,6 +100,7 @@
 <li>Cooperate with campus mechanics, janitors, and directors to ensure outstanding housing services</li>
 <li>Remain on-call for Marquette campus residential facilities for certain weekends and weekdays </li>
 </ul>
+<hr>
 	<h2>Software and Coding Experience <br/> Fall 2016-Current</h2>
 <ul>
 <li>Knowledgeable in C, Java, and VHDL programming languages</li>
@@ -107,6 +109,7 @@
 <li>Experienced in all Microsoft Office applications</li>
 <li>Learned in photoshop, Logger Pro, and Paint design software’s</li>
 </ul>
+<hr>
 	<h2>Laboratory Technician, Fermi National Accelerator Laboratory <br/>Summer and Winter 2017</h2>
 <ul>
 <li>Organized and filed engineering equipment into a database using Microsoft Excel</li>
@@ -114,6 +117,7 @@
 <li>Administered equipment tests to ensure proper functioning of engineering tools in the lab</li>
 <li>Underwent Radiation Training to handle dangerous chemicals</li>
 </ul>
+<hr>
 	<h2>Biomedical Engineering Laboratory<br/> Fall 2016-Spring 2017</h2>
 <ul>
 <li>	Designed and prototyped innovative epinephrine injector for anaphylactic shock treatment</li>
