--- a/Experience.html
+++ b/Experience.html
@@ -31,7 +31,9 @@
       color: white;
       padding: 15px;
     }
-    
+   .maxsize {
+	height: 10%;
+	width: 15%; 
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
       .sidenav {
