--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,7 @@
     /* Set black background color, white text and some padding */
     footer {
       background-color: #555;
-      color: white;
+      color: tan;
       padding: 15px;
     }
     
