--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,7 @@
     /* Set black background color, white text and some padding */
     footer {
       background-color: #555;
-      color: tan;
+      color: white;
       padding: 15px;
     }
     
@@ -75,18 +75,19 @@
       <p><a href="#">Link</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome!</h1>
-      <p>This is my home page.</p>
+      <h1>Welcome to my website!</h1>
+      <p>I am a second semester junior at Marquette University Studying Biocomputing Engineering. This website is meant to be a fully comprehensive background of my professional experience. I am currently open to working in a software or electrical engineering position starting as soon as Summer 2019. 
+ <div>I am presently working for Ultronic Systems as an electical and computer engineering intern. I am also employed by the Marquette University Office of Residence Life as a building manager. </div> </p>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3></h3>
+      <p></p>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <p>ADS</p>
+        <p></p>
       </div>
       <div class="well">
-        <p>ADS</p>
+        <p></p>
       </div>
     </div>
   </div>
