--- a/Home.html
+++ b/Home.html
@@ -51,7 +51,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">WY</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -70,12 +70,12 @@
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+      <p><a href="#"></a></p>
+      <p><a href="#"></a></p>
+      <p><a href="#"></a></p>
     </div>
     <div class="col-sm-8 text-left"> 
-      <h1>Welcome to my website!</h1>
+      <h1>William Youman</h1>
       <p>I am a second semester junior at Marquette University Studying Biocomputing Engineering. This website is meant to be a fully comprehensive background of my professional experience. I am currently open to working in a software or electrical engineering position starting as soon as Summer 2019. 
  <div>I am presently working for Ultronic Systems as an electical and computer engineering intern. I am also employed by the Marquette University Office of Residence Life as a building manager. </div> </p>
       <hr>
@@ -94,7 +94,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p></p>
 </footer>
 
 </body>
