--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-CTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <title>willyouman/Contact</title>
@@ -69,16 +69,20 @@ CTYPE html>
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+      <p><a href="#"></a></p>
+      <p><a href="#"></a></p>
+      <p><a href="#"></a></p>
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Contact Information</h1>
-      <p>Info</p>
+      <p></p>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3>Email</h3>
+       <p>william.youman@marquette.edu<br/>will@ultronic.com</p>
+      <h3>Phone</h3>
+       <p>Cell: (630)-659-5145<br/>Work: (414)-</p>
+      <h3>Address</h3>
+       <p>Campus: 1032 W Wisconsin Avenue, Milwaukee, Wisconsin 53233<br/>Home: 1500 Eagle Brook Dr, Geneva, Illinois 60134</p>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
